--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Clone</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     Welcome to my Amazon Clone...
